# sqlalchemy-iris

./: .gitignore  setup.cfg  setup.py  test_dbapi.py
sqlalchemy_iris/: __init__.py  intersystems.py  intersystems_cursor.py  intersystems_dbapi.py
tests/: conftest.py  test_suite.py
