[metadata]
name = sqlalchemy-iris
version = 0.15.0b1
description = InterSystems IRIS for SQLAlchemy
long_description = file: README.md
url = https://github.com/caretdev/sqlalchemy-iris
maintainer = CaretDev
maintainer_email = dmitry@caretdev.com
license = MIT
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Database :: Front-Ends
    Operating System :: OS Independent
keywords="SQLAlchemy InterSystems IRIS",
project_urls =
    Source = https://github.com/caretdev/sqlalchemy-iris
    Tracker = https://github.com/caretdev/sqlalchemy-iris/issues

[options]
python_requires = >=3.8
packages = find:

[tool:pytest]
addopts= --tb native -v -r fxX --maxfail=100 -p no:warnings --container intersystemsdc/iris-community:latest

[db]
default=iris+intersystems://SuperUser:SYS@localhost:51773/USER
iris=iris://SuperUser:SYS@localhost:51773/USER
irisintersystems=iris+intersystems://SuperUser:SYS@localhost:51773/USER
irisasync=iris+irisasync://SuperUser:SYS@localhost:51773/USER
irisemb=iris+emb:///
sqlite=sqlite:///:memory:

[sqla_testing]
requirement_cls=sqlalchemy_iris.requirements:Requirements
profile_file=test/profiles.txt

[flake8]
max-line-length=120
